finalize greedy bigram generator with stop word and loop guard improvements